<resources>
    <string name="message_snackbar">Message Snackbar</string>
    <string name="sign_up">SIGN UP FOR AN ACCOUNT?</string>
    <string name="signin">M A S U K</string>
    <string name="password">PASSWORD</string>
    <string name="username">USERNAME</string>
    <string name="sign_in_to_continue">Login untuk masuk E-Improvement</string>
    <string name="welcome">E-Improvement</string>
    <string name="welcome_user">Hi,</string>
    <string name="back">KEMBALI</string>
    <string name="next">LANJUT</string>
    <string name="getStarted">MULAI</string>
    <string name="info">INFO</string>
    <string name="app_version">App Version</string>
    <string name="version_unknown">Version Unknown</string>
    <string name="change_password">Ganti Password</string>
    <string name="detail_balance">Detail Saldo Akhir</string>
    <string name="configuration">PENGATURAN</string>
    <string name="position">Posisi</string>
    <string name="department">Departement</string>
    <string name="sub_branch">Sub Cabang</string>
    <string name="branch">Cabang</string>
    <string name="nik">NIK</string>
    <string name="name">Nama</string>
    <string name="profile_information">INFORMASI PROFIL</string>
    <string name="point">POIN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="add">Tambah</string>
    <string name="attachment_suggestion_system">Lampiran Sistem Saran</string>
    <string name="attachment_project_improvement">Lampiran Project Improvement</string>
    <string name="max_file_2mb"><![CDATA[Ukuran Maks 2MB &]]></string>
    <string name="file_type_attachment">Tipe File xls/xlsx/doc/docx/pdf/jpg/png</string>
    <string name="attachment">Lampiran</string>
    <string name="attachment_add">Tap untuk menambahkan File</string>
    <string name="ss_no">Sistem Saran No</string>
    <string name="select">Pilih</string>
    <string name="title">Judul</string>
    <string name="branch_amp_sub_branch"><![CDATA[Cabang & Sub Cabang]]></string>
    <string name="created_date">Tanggal dibuat</string>
    <string name="start">Mulai</string>
    <string name="end">Selesai</string>
    <string name="apply">TERAPKAN</string>
    <string name="cancel">Batal</string>
    <string name="suggestion_system_no">Sistem Saran No</string>
    <string name="please_fill_the_form_to_create_suggestion">Silahkan Isi Untuk Membuat Saran.</string>
    <string name="form_suggestion_system">Formulir Sistem Saran</string>
    <string name="direct_manager">Supervisor/ Manager Langsung</string>
    <string name="category_suggestion">Kategori Saran</string>
    <string name="identifikasi_dan_analisa_akar_masalah">A. Identifikasi dan Analisa Akar Masalah</string>
    <string name="ceritakan_masalah_yg_akan_anda_selesaikan_dan_tuliskan_analisa_akar_masalahnya">Ceritakan masalah yg akan anda selesaikan dan tuliskan analisa akar masalahnya.</string>
    <string name="saran_dan_ide_saya">B. Saran dan Ide Saya</string>
    <string name="ceritakan_apa_yang_anda_lakukan">Ceritakan apa yang anda lakukan.</string>
    <string name="status_implementasi_improvement">Status Implementasi Improvement</string>
    <string name="sudah_pernah_diimplementasi_pada_periode">Sudah pernah diimplementasi. Pada periode :</string>
    <string name="from">Mulai</string>
    <string name="to">Sampai</string>
    <string name="akan_diimplementasi_pada_periode">Akan diimplementasi. Pada periode :</string>
    <string name="dash">-</string>
    <string name="team_member">Anggota Tim</string>
    <string name="task">Tugas</string>
    <string name="title_suggestion">Judul Saran</string>
    <string name="list_approval">Persetujuan</string>
    <string name="suggestion_system">Sistem Saran</string>
    <string name="project_improvement">Project Improvement</string>
    <string name="change_point">Penukaran Poin</string>
    <string name="dashboard">Dashboard</string>
    <string name="other">Lain - lain</string>
    <string name="history_approval">Histori Persetujuan</string>
    <string name="title_improvement">Judul Improvement</string>
    <string name="created_year">Tahun</string>
    <string name="point_balanca">Point Anda</string>
    <string name="project_improvement_no">Project Improvement No.</string>
    <string name="form_project_improvement">Formulir Project Improvement</string>
    <string name="identifikasi_masalah">Indentifikasi Masalah</string>
    <string name="analisa_data">Analisa Data</string>
    <string name="analisa_akar_masalah">Analisa Akar Masalah</string>
    <string name="menyusun_rencana_penganggulangan_masalah">Menyusun Rencana Penganggulangan Masalah</string>
    <string name="implementasi_rencana_perbaikan">Implementasi Rencana Perbaikan</string>
    <string name="analisis_periksa_dan_evaluasi_hasil_pencairan">Analisis, Periksa dan Evaluasi Hasil Pencairan</string>
    <string name="b_menetapkan_target">B. Menetapkan Target</string>
    <string name="a_mengidentifikasi_masalah">A. Mengidentifikasi Masalah</string>
    <string name="fase_perencanaan">Fase Perencanaan (PLAN)</string>
    <string name="c_mencari_sebab_akar_masalah">C. Mencari Sebab/Akar Masalah</string>
    <string name="berikan_analisa_dasar_masalah_menggunakan_5_why_always">Berikan Analisa dasar masalah menggunakan 5-Why Always</string>
    <string name="w1">W1</string>
    <string name="w2">W2</string>
    <string name="w3">W3</string>
    <string name="w4">W4</string>
    <string name="w5">W5</string>
    <string name="add_sebab_akar_masalah">Add Sebab/ Akar Masalah</string>
    <string name="save">Simpan</string>
    <string name="penyebab_masalah">Penyebab Masalah</string>
    <string name="akar_masalah_prioritas">Akar Masalah Prioritas</string>
    <string name="akar_masalah_why_terakhir">Akar Masalah (Why Terakhir)</string>
    <string name="improvement_yang_dilakukan">Improvement yang dilakukan</string>
    <string name="detail_langkah_improvement">Detail Langkah Improvement</string>
    <string name="d_saran_akar_masalah">D. Saran/Akar Masalah</string>
    <string name="nilai_output_benefit_yang_diharapkan">Nilai Output Benefit yang diharapkan</string>
    <string name="perhitungan_nqi">Perhitungan NQI</string>
    <string name="estimasi">Estimasi</string>
    <string name="benefit">Benefit</string>
    <string name="keterangan">Keterangan</string>
    <string name="rp">Rp.</string>
    <string name="cost">Cost</string>
    <string name="nqiModel">NQI</string>
    <string name="aktual">Aktual</string>
    <string name="f_kategori_perbaikan">F. Kategori Perbaikan</string>
    <string name="pilihlah_pilihan_yang_menurut_anda_sesuai">Pilihlah - pilihan yang menurut anda sesuai</string>
    <string name="g_hasil_implementasi_improvement">G. Hasil Implementasi Improvement</string>
    <string name="jika_improvement_sudah_diimplementasikan">Jika Improvement sudah diimplementasikan</string>
    <string name="ide_perbaikan">C. Proses Pelaksanaan Ide Perbaikan</string>
    <string name="Hasil_implementasi">D. Hasil Yang Saya Dapat Atas Implementasi Saran dan Ide</string>
    <string name="setting">Pengaturan</string>
    <string name="error">Error</string>
    <string name="menu_not_eligible">User Tidak Memiliki Akses Untuk Menu Ini</string>
    <string name="level_not_eligible">Level jabatan Anda tidak dapat membuat Project Improvement.</string>
    <string name="succes">Sukses</string>
    <string name="please_fill_the_form_to_create_project_improvement">Silahkan Isi Untuk Membuat Project Improvement.</string>
    <string name="wrong_field">Pastikan data sudah terisi dengan benar</string>
    <string name="filter">Filter</string>
    <string name="create">Tambah</string>
    <string name="form_sebab_akar_masalah_must_be_fill">Form Sebab/ akar masalah harus diisi</string>
    <string name="name_empty">Silahkan Isi Kolom Nama Dengan Sesuai</string>
    <string name="department_empty">Silahkan Isi Kolom Departement Dengan Sesuai</string>
    <string name="task_empty">Silahkan Isi Kolom Tugas Dengan Sesuai</string>
    <string name="team_member_empty">Silahkan Isi Anggota Team Dengan Sesuai</string>
    <string name="date_empty">Silahkan Isi Kolom Tanggal Dengan Sesuai</string>
    <string name="desc_empty">Silahkan Isi Kolom keterangan Dengan Sesuai</string>
    <string name="title_empty">Silahkan Isi Kolom Judul Dengan Sesuai</string>
    <string name="reward_empty">Silahkan Tambahkan Hadiah yang ingin Di Tukarkan</string>
    <string name="title_past_period">Proposal Dibuat telah melewati periode</string>
    <string name="submit_desc">Data yang sudah dikirim tidak dapat diubah</string>
    <string name="implementation_desc">Dengan ini Anda akan mengimplementasikan project</string>
    <string name="check_desc">Apakah Anda ingin melakukan pengecekan proposal?</string>
    <string name="review_desc">Apakah Anda ingin melakukan review laporan akhir?</string>
    <string name="pi_saved">Data Project Improvement Tersimpan</string>
    <string name="ss_saved">Data Sistem Saran Tersimpan</string>
    <string name="cp_saved">Data Penukaran Point Tersimpan</string>
    <string name="indentification_empty">Silahkan Isi Kolom Indentifikasi Masalah Dengan Sesuai</string>
    <string name="set_target_empty">Silahkan Isi Kolom Menetapkan Target Dengan Sesuai</string>
    <string name="delete">Hapus</string>
    <string name="delete_confirmation">Apakah Anda Yakin Menghapus Data Ini?</string>
    <string name="delete_confirmation_file_attachment">Apakah Anda Yakin Menghapus File Lampiran Ini?</string>
    <string name="problem_reason">Silahkan Isi Kolom Penyebab Masalah Dengan Sesuai</string>
    <string name="why">Why</string>
    <string name="why_required">Why 1 harus diisi</string>
    <string name="problem_root">Silahkan Isi Kolom Akar Masalah Dengan Sesuai</string>
    <string name="problem_root_reason">Silahkan Tambah Sebab/Akar Masalah</string>
    <string name="problem_suggest">Silahkan Lengkapi Akar Masalah</string>
    <string name="problem_empty">Silahkan Isi Masalah Dengan Sesuai</string>
    <string name="suggest_empty">Silahkan Isi Saran atau Ide Dengan Sesuai</string>
    <string name="value_estimasi_empty">Silahkan Isi Kolom Estimasi Dengan Sesuai</string>
    <string name="value_Aktual_empty">Silahkan Isi Kolom Aktual Dengan Sesuai</string>
    <string name="other_category_empty">Pilihlah minimal Salah Satu Kategori</string>
    <string name="result_empty">Silahkan Isi Kolom Hasil Implementasi Dengan Sesuai</string>
    <string name="category_empty">Pastikan Kategori Terisi Sebelum Lanjut</string>
    <string name="file_not_found">Lampiran Tidak Tersedia Pada Perangkat Ini</string>
    <string name="file_size">Pastikan Ukuran Lampiran tidak 0 MB dan dibawah 2 MB</string>
    <string name="file_ext">Ekstensien Lampiran Tidak Sesuai</string>
    <string name="file_empty">Lampiran Tidak Tersedia</string>
    <string name="file_required">File Implementasi harus dilampirkan</string>
    <string name="saldo_kurang">Saldo anda tidak cukup untuk melakukan transaksi ini</string>
    <string name="log_out_info">Apakah Anda Yakin Keluar Akun?</string>
    <string name="log_out">Keluar</string>
    <string name="account_inactive">Akun anda tidak aktif</string>
    <string name="no_internet">Gagal Terhubung Server. Silahkan Cek Kembali Koneksi Anda</string>
    <string name="data_not_found">Data Not Found</string>
    <string name="leader_required">Anda harus memilih Ketua Tim terlebih dahulu!</string>
    <string name="old_pass_empty">Masukan Password Lama Anda</string>
    <string name="new_pass_empty">Masukan Password Baru Anda</string>
    <string name="penukaran_hadiah">Penukaran Hadiah</string>
    <string name="nilai">Nilai</string>
    <string name="close">Close</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="ok">YA</string>
    <string name="no">NO</string>
</resources>