<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    app:cardMaxElevation="4dp"
    app:cardUseCompatPadding="true"
    android:theme="@style/Theme.MaterialComponents.Light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/reward"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/penukaran_hadiah"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/grey_80"
                android:gravity="center_vertical" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:id="@+id/remove_reward"
                android:layout_width="@dimen/spacing_xxxlarge"
                android:layout_height="@dimen/spacing_xxlarge"
                app:icon="@drawable/ic_delete"
                app:iconTint="@color/colorAccent" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:background="@color/grey_10" />

        <TextView
            android:id="@+id/point"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:text="@string/nilai"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey_600"/>

        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_large"
            android:layout_marginHorizontal="@dimen/spacing_large"
            tools:text="@string/keterangan"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@color/grey_600"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>