<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.MaterialComponents.Light"
    tools:context=".features.suggestionsystem.ui.create.SuggestionSystemStep3Fragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_medium"
        app:cardCornerRadius="6dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_large">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:layout_marginHorizontal="@dimen/spacing_large"
                    android:text="@string/team_member"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/grey_80" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="@dimen/spacing_small"
                    android:layout_weight="1"/>

                <com.google.android.material.button.MaterialButton
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:id="@+id/add_team_member"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:text="@string/add"
                    android:textColor="@color/colorMainEImprovement"
                    app:icon="@drawable/ic_add"
                    app:iconTint="@color/colorMainEImprovement" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xxlarge"
                android:textColorHint="@color/colorPrimary"
                app:boxStrokeColor="@color/colorPrimary">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/member_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/name"
                    android:maxLines="1"
                    android:padding="0dp"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xxlarge"
                android:textColorHint="@color/colorPrimary"
                app:boxStrokeColor="@color/colorPrimary">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/member_department"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/department"
                    android:maxLines="1"
                    android:padding="0dp"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="@dimen/spacing_xxlarge"
                android:textColorHint="@color/colorPrimary"
                app:boxStrokeColor="@color/colorPrimary">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/member_task"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/task"
                    android:maxLines="1"
                    android:padding="0dp"
                    android:singleLine="true"
                    android:textColor="@color/colorPrimary" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_ss_team_member"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:scrollingCache="true"
        android:layout_marginHorizontal="@dimen/spacing_medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view"
        tools:listitem="@layout/item_suggestion_system_team_member" />

</androidx.constraintlayout.widget.ConstraintLayout>